@@ -35,6 +35,9 @@ gdb_start
 gdb_reinitialize_dir $srcdir/$subdir
 gdb_load ${binfile}
 
+# This is a testcase specifically for the `start' GDB command.  For regular
+# stop-in-main goal in the testcases consider using `runto_main' instead.
+
 # For C programs, "start" should stop in main().
 if { [gdb_start_cmd] < 0 } {
     untested start
@@ -44,4 +47,3 @@ if { [gdb_start_cmd] < 0 } {
 gdb_test "" \
          "main \\(\\) at .*start.c.*" \
          "start"
-
