@@ -1,3 +1,8 @@
+2008-11-25  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	* gdb.base/breakpoint-shadow.exp, gdb.base/breakpoint-shadow.c: New.
+	* gdb.base/start.exp: New comment about an alternative - `runto_main'.
+
 2008-11-20  Andreas Schwab  <schwab@suse.de>
 
 	* gdb.base/foll-fork.exp (catch_fork_child_follow): Fix patterns
